[package]
name = "jmix-rs"
version = "0.2.0"
edition = "2021"
authors = ["Aurabox <hello@aurabox.cloud>"]
description = "Rust library for JMIX (JSON Medical Interchange) format - secure medical data exchange with cryptographic features"
license = "MIT"
repository = "https://github.com/aurabx/jmix-rust"
homepage = "https://github.com/aurabx/jmix-rust"
keywords = ["jmix", "medical", "dicom", "encryption", "healthcare"]
categories = ["cryptography", "data-structures", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3.0"
dicom-object = "0.8.2"
dicom-dictionary-std = "0.8.1"
jsonschema = "0.33.0"
once_cell = "1.19"
base64 = "0.22"
x25519-dalek = { version = "2.0", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
tar = "0.4"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "runbeam"
path = "src/bin/runbeam.rs"
